--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">StarWarsApp</string>
     <string name="characters_label">Characters</string>
     <string name="starships_label">Starships</string>
+    <string name="favorites_label">Favorite characters</string>
     <string name="search_button_text">search</string>
     <string name="menu_label_characters">characters</string>
     <string name="menu_label_starships">starships</string>
-    <string name="menu_label_new">new</string>
+    <string name="menu_label_new">favorites</string>
 </resources>
